Bug 216559 - CSS3 currentColor.  Patch by scootermorris@comcast.net. r=bz, sr=dbaron.