content/svg/content/src/nsSVGDefsElement.cpp
@@ -116,7 +116,8 @@ nsSVGDefsElement::IsAttributeMapped(const nsIAtom* name) const
 {
   static const MappedAttributeEntry* const map[] = {
     sTextContentElementsMap,
-    sFontSpecificationMap
+    sFontSpecificationMap,
+    sColorMap
   };
   
   return FindAttributeDependence(name, map, NS_ARRAY_LENGTH(map)) ||
